Add care plan Template Advance

--- a/src/app/care-plan-template/detail-care-plan-template/detail-care-plan-template.page.html
+++ b/src/app/care-plan-template/detail-care-plan-template/detail-care-plan-template.page.html
@@ -74,6 +74,10 @@
                 <ion-icon name="list-circle-outline"></ion-icon>
                 <ion-label text-wrap>Condition</ion-label>
             </ion-segment-button>
+            <ion-segment-button value="patient">
+                <ion-icon name="accessibility-outline"></ion-icon>
+                <ion-label text-wrap>Patient</ion-label>
+            </ion-segment-button>
 
         </ion-segment>
         <div *ngIf="segmentModel2 === 'profile'">
