--- a/src/app/care-plan-template/add-care-plan-template/add-care-plan-template.page.scss
+++ b/src/app/care-plan-template/add-care-plan-template/add-care-plan-template.page.scss
@@ -96,5 +96,5 @@ ion-segment-button {
     font-size: 10px;
     border: none;
     background-color: rgb(248, 248, 248);
-    border-radius: 50%;
+    /*   border-radius: 50%; */
 }
