Prepare for add goal and target and measure

--- a/src/app/care-plan-template/add-care-plan-template/add-care-plan-template.page.html
+++ b/src/app/care-plan-template/add-care-plan-template/add-care-plan-template.page.html
@@ -198,7 +198,7 @@
 
     </div>
     <div *ngIf="segmentModel === 'goal'">
-        <!-- <app-add-command-component></app-add-command-component> -->
+        <app-add-goal></app-add-goal>
 
     </div>
     <div *ngIf="segmentModel === 'comunication'">
