--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -21,7 +21,7 @@
         </ion-tab-button>
 
         <ion-tab-button tab="tab3">
-            <ion-icon name="medkit-outline"></ion-icon>
+            <ion-icon name="fitness-outline"></ion-icon>
             <ion-label>Care Plan</ion-label>
         </ion-tab-button>
     </ion-tab-bar>
